--- a/webMetics/Views/EmailSettings/Index.cshtml
+++ b/webMetics/Views/EmailSettings/Index.cshtml
@@ -19,6 +19,21 @@
         <h1>@ViewBag.Title</h1>
         <hr />
 
+        @if (ViewBag.ErrorMessage != null)
+        {
+            <div class="alert alert-dark alert-dismissible fade show mb-4" role="alert">
+                @ViewBag.ErrorMessage
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+        @if (ViewBag.SuccessMessage != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show mb-4" role="alert">
+                @ViewBag.SuccessMessage
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+
         <form asp-action="ToggleEmailSending" method="post">
             <div class="row mb-1">
                 <div class="container">
