Se coloca botón de alternar vista a la par del buscador.

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -8,7 +8,7 @@
     Los usuarios se pueden inscribir en un grupo y ver el programa del grupo
 -->
 @{
-    ViewBag.Title = "Módulos disponibles";
+    ViewBag.Title = "Módulos disponibles para inscripción";
 }
 
 @if (!string.IsNullOrEmpty(ViewBag.Id))
@@ -45,20 +45,24 @@
         }
         else
         {
-            <div class="my-4">
-                <!-- Botón para cambiar entre vista de lista y de cuadrícula -->
-                <button class="btn btn-secondary" id="toggleViewBtn" onclick="toggleView()"><i class="bi bi-eye-fill me-2"></i>Modo lista</button>
-            </div>
+            
 
             if (ViewBag.GruposInscritos != null)
             {
             <h1>Módulos inscritos</h1>
-            <div>
+            <div class="d-flex justify-content-between">
                 <!-- Barra de búsqueda -->
-                <form asp-action="BuscarGrupos" asp-controller="Grupo" method="get" class="input-group mb-3">
-                    <input type="text" name="searchTerm" class="form-control" placeholder="Buscar módulo" value="@Context.Request.Query["searchTerm"]" />
-                    <button class="btn btn-outline-secondary" type="submit">Buscar</button>
-                </form>
+                <div class="w-75 me-2">
+                    <form asp-action="BuscarGrupos" asp-controller="Grupo" method="get" class="input-group mb-3">
+                        <input type="text" name="searchTerm" class="form-control" placeholder="Buscar módulo" value="@Context.Request.Query["searchTerm"]" />
+                        <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+                    </form>
+                </div>
+
+                <!-- Botón para cambiar entre vista de lista y de cuadrícula -->
+                <div class="ms-2">
+                    <button class="btn btn-secondary" id="toggleViewBtn" onclick="toggleView()"><i class="bi bi-list-ul me-2"></i>Modo lista</button>
+                </div>
             </div>
 
             <br />
@@ -334,12 +338,19 @@
         }
 
         <h1>@ViewBag.Title</h1>
-        <div class="my-4">
+        <div class="d-flex justify-content-between my-4">
             <!-- Barra de búsqueda -->
-            <form asp-action="BuscarGrupos" asp-controller="Grupo" method="get" class="input-group mb-3">
-                <input type="text" name="searchTerm" class="form-control" placeholder="Buscar módulo" value="@Context.Request.Query["searchTerm"]" />
-                <button class="btn btn-secondary" type="submit"><i class="bi bi-search"></i></button>
-            </form>
+            <div class="w-75 me-2">
+                <form asp-action="BuscarGrupos" asp-controller="Grupo" method="get" class="input-group mb-3">
+                    <input type="text" name="searchTerm" class="form-control" placeholder="Buscar módulo" value="@Context.Request.Query["searchTerm"]" />
+                    <button class="btn btn-secondary" type="submit"><i class="bi bi-search"></i></button>
+                </form>
+            </div>
+
+            <!-- Botón para cambiar entre vista de lista y de cuadrícula -->
+            <div class="ms-2">
+                <button class="btn btn-secondary" id="toggleViewBtn" onclick="toggleView()"><i class="bi bi-list-ul me-2"></i>Modo lista</button>
+            </div>
         </div>
 
         <br />
@@ -942,14 +953,14 @@ else
             if (gridView) gridView.classList.add("d-none");  
             if (listView0) listView0.classList.remove("d-none");
             if (listView) listView.classList.remove("d-none");  
-            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-eye-fill me-2'></i>Modo cuadrícula";
+            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-grid me-2'></i>Modo cuadrícula";
         } else {
             isListView = false;
             if (gridView) gridView.classList.remove("d-none");  
             if (gridView0) gridView0.classList.remove("d-none");
             if (listView0) listView0.classList.add("d-none");
             if (listView) listView.classList.add("d-none");  
-            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-eye-fill me-2'></i>Modo lista";
+            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-list-ul me-2'></i>Modo lista";
         }
     };
 
@@ -967,14 +978,14 @@ else
             if (gridView0) gridView0.classList.add("d-none");
             if (listView0) listView0.classList.remove("d-none");
             if (listView) listView.classList.remove("d-none");  
-            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-eye-fill me-2'></i>Modo cuadrícula";
+            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-grid me-2'></i>Modo cuadrícula";
             localStorage.setItem('viewMode', 'list');  
         } else {
             if (gridView) gridView.classList.remove("d-none");
             if (gridView0) gridView0.classList.remove("d-none");
             if (listView0) listView0.classList.add("d-none");
             if (listView) listView.classList.add("d-none");  
-            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-eye-fill me-2'></i>Modo lista";
+            if (toggleViewBtn) toggleViewBtn.innerHTML = "<i class='bi bi-list-ul me-2'></i>Modo lista";
             localStorage.setItem('viewMode', 'grid');  
         }
     }
