Cambio título módulos disponibles.

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -8,7 +8,7 @@
     Los usuarios se pueden inscribir en un grupo y ver el programa del grupo
 -->
 @{
-    ViewBag.Title = "Módulos disponibles para inscripción";
+    ViewBag.Title = "Módulos Disponibles para Inscripción";
 }
 
 @if (!string.IsNullOrEmpty(ViewBag.Id))
